Closed
Bug 1175147
Opened 6 years ago
Closed 6 years ago
Don't do threadsafety asserts for NPN_MemAlloc
Categories
(Core :: Plug-ins, defect)
Core
Plug-ins
Tracking
()
RESOLVED
FIXED
mozilla41
Tracking | Status | |
---|---|---|
firefox41 | --- | fixed |
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
The VLC plugin appears to be using NPN_MemAlloc on all threads. There is no particular reason this shouldn't be allowed, but we have an AssertPluginThread there. I think we can just remove it. See e.g. https://crash-stats.mozilla.com/report/index/d539de3d-c18e-4aed-9270-f19a92150612#allthreads This is a regression from bug 1170343
Assignee | ||
Comment 1•6 years ago
|
||
Bug 1175147 - Don't do threadsafety asserts for NPN_MemAlloc and friends, r?jimm
Attachment #8623108 -
Flags: review?(jmathies)
![]() |
||
Updated•6 years ago
|
Attachment #8623108 -
Flags: review?(jmathies) → review+
Comment 3•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/4e3472514e3a
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•