Bug 1175147 - Don't do threadsafety asserts for NPN_MemAlloc and friends, r=jimm